--- a/env/pyvenv.cfg
+++ b/env/pyvenv.cfg
@@ -1,3 +1,3 @@
-home = C:\Users\alann\AppData\Local\Programs\Python\Python39
+home = C:\Users\Beelink\AppData\Local\Programs\Python\Python310
 include-system-site-packages = false
-version = 3.9.10
+version = 3.10.5
